# ubuntu-frame-osk

./: .gitignore  README.md  SECURITY.md
.github/workflows/: close-snap.yml  edge.yml  snap.yml
list-layouts/: main.c  meson.build
patches/squeekboard-patches/: 0001-Enable-sharing-keymap-fds-from-a-confined-snap.patch  0002-Remove-Werror-redundant-decls.patch  0002-build-Replace-missing-crates.io-dependency-with-Puri.patch  0003-Check-if-dbus-handler-is-null-before-using.patch  0003-fix-scaling-to-set-height-backport.patch  0004-Remove-Keyboard-Settings-button-from-UI.patch  0005-Change-get_preferred_height_and_arrangement.patch
pid-registrar/: CMakeLists.txt  main.c
scripts/include/: hook-common
snap/: snapcraft.yaml
snap/hooks/: common  configure  install
